--- a/index.html
+++ b/index.html
@@ -4,13 +4,346 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <div class="videos">
         <section class="video-section">
             <article class="video-container">
-                <a href="#" class="thumbnail">
+                <a href="#" class="thumbnail" data-duration="12:24">
+                    <img src="http://unsplash.it/250/150?gravity=center" alt="" class="thumbnail-image" />
+                </a>
+                <div class="video-bottom-section">
+                    <a href="#">
+                        <img src="http://unsplash.it/36/36?gravity=center" class="channel-icon" />
+                    </a>
+                    <div class="video-details">
+                        <a href="#" class="video-title">Video Title</a>
+                        <a href="#" class="video-channel-name">Channel Name</a>
+                        <div class="video-metadata">
+                            <span>12K views</span>
+                            •
+                            <span>1 week ago</span>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="video-container">
+                <a href="#" class="thumbnail" data-duration="12:24">
+                    <img src="http://unsplash.it/250/150?gravity=center" alt="" class="thumbnail-image" />
+                </a>
+                <div class="video-bottom-section">
+                    <a href="#">
+                        <img src="http://unsplash.it/36/36?gravity=center" class="channel-icon" />
+                    </a>
+                    <div class="video-details">
+                        <a href="#" class="video-title">Video Title</a>
+                        <a href="#" class="video-channel-name">Channel Name</a>
+                        <div class="video-metadata">
+                            <span>12K views</span>
+                            •
+                            <span>1 week ago</span>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="video-container">
+                <a href="#" class="thumbnail" data-duration="12:24">
+                    <img src="http://unsplash.it/250/150?gravity=center" alt="" class="thumbnail-image" />
+                </a>
+                <div class="video-bottom-section">
+                    <a href="#">
+                        <img src="http://unsplash.it/36/36?gravity=center" class="channel-icon" />
+                    </a>
+                    <div class="video-details">
+                        <a href="#" class="video-title">Video Title</a>
+                        <a href="#" class="video-channel-name">Channel Name</a>
+                        <div class="video-metadata">
+                            <span>12K views</span>
+                            •
+                            <span>1 week ago</span>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="video-container">
+                <a href="#" class="thumbnail" data-duration="12:24">
+                    <img src="http://unsplash.it/250/150?gravity=center" alt="" class="thumbnail-image" />
+                </a>
+                <div class="video-bottom-section">
+                    <a href="#">
+                        <img src="http://unsplash.it/36/36?gravity=center" class="channel-icon" />
+                    </a>
+                    <div class="video-details">
+                        <a href="#" class="video-title">Video Title</a>
+                        <a href="#" class="video-channel-name">Channel Name</a>
+                        <div class="video-metadata">
+                            <span>12K views</span>
+                            •
+                            <span>1 week ago</span>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="video-container">
+                <a href="#" class="thumbnail" data-duration="12:24">
+                    <img src="http://unsplash.it/250/150?gravity=center" alt="" class="thumbnail-image" />
+                </a>
+                <div class="video-bottom-section">
+                    <a href="#">
+                        <img src="http://unsplash.it/36/36?gravity=center" class="channel-icon" />
+                    </a>
+                    <div class="video-details">
+                        <a href="#" class="video-title">Video Title</a>
+                        <a href="#" class="video-channel-name">Channel Name</a>
+                        <div class="video-metadata">
+                            <span>12K views</span>
+                            •
+                            <span>1 week ago</span>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="video-container">
+                <a href="#" class="thumbnail" data-duration="12:24">
+                    <img src="http://unsplash.it/250/150?gravity=center" alt="" class="thumbnail-image" />
+                </a>
+                <div class="video-bottom-section">
+                    <a href="#">
+                        <img src="http://unsplash.it/36/36?gravity=center" class="channel-icon" />
+                    </a>
+                    <div class="video-details">
+                        <a href="#" class="video-title">Video Title</a>
+                        <a href="#" class="video-channel-name">Channel Name</a>
+                        <div class="video-metadata">
+                            <span>12K views</span>
+                            •
+                            <span>1 week ago</span>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section>
+        <section class="video-section">
+            <h2 class="video-section-title">
+                Special Section
+                <button class="video-section-title-close">&times;</button>
+            </h2>
+            <article class="video-container">
+                <a href="#" class="thumbnail" data-duration="12:24">
+                    <img src="http://unsplash.it/250/150?gravity=center" alt="" class="thumbnail-image" />
+                </a>
+                <div class="video-bottom-section">
+                    <a href="#">
+                        <img src="http://unsplash.it/36/36?gravity=center" class="channel-icon" />
+                    </a>
+                    <div class="video-details">
+                        <a href="#" class="video-title">Video Title</a>
+                        <a href="#" class="video-channel-name">Channel Name</a>
+                        <div class="video-metadata">
+                            <span>12K views</span>
+                            •
+                            <span>1 week ago</span>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="video-container">
+                <a href="#" class="thumbnail" data-duration="12:24">
+                    <img src="http://unsplash.it/250/150?gravity=center" alt="" class="thumbnail-image" />
+                </a>
+                <div class="video-bottom-section">
+                    <a href="#">
+                        <img src="http://unsplash.it/36/36?gravity=center" class="channel-icon" />
+                    </a>
+                    <div class="video-details">
+                        <a href="#" class="video-title">Video Title</a>
+                        <a href="#" class="video-channel-name">Channel Name</a>
+                        <div class="video-metadata">
+                            <span>12K views</span>
+                            •
+                            <span>1 week ago</span>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="video-container">
+                <a href="#" class="thumbnail" data-duration="12:24">
+                    <img src="http://unsplash.it/250/150?gravity=center" alt="" class="thumbnail-image" />
+                </a>
+                <div class="video-bottom-section">
+                    <a href="#">
+                        <img src="http://unsplash.it/36/36?gravity=center" class="channel-icon" />
+                    </a>
+                    <div class="video-details">
+                        <a href="#" class="video-title">Video Title</a>
+                        <a href="#" class="video-channel-name">Channel Name</a>
+                        <div class="video-metadata">
+                            <span>12K views</span>
+                            •
+                            <span>1 week ago</span>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="video-container">
+                <a href="#" class="thumbnail" data-duration="12:24">
+                    <img src="http://unsplash.it/250/150?gravity=center" alt="" class="thumbnail-image" />
+                </a>
+                <div class="video-bottom-section">
+                    <a href="#">
+                        <img src="http://unsplash.it/36/36?gravity=center" class="channel-icon" />
+                    </a>
+                    <div class="video-details">
+                        <a href="#" class="video-title">Video Title</a>
+                        <a href="#" class="video-channel-name">Channel Name</a>
+                        <div class="video-metadata">
+                            <span>12K views</span>
+                            •
+                            <span>1 week ago</span>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="video-container">
+                <a href="#" class="thumbnail" data-duration="12:24">
+                    <img src="http://unsplash.it/250/150?gravity=center" alt="" class="thumbnail-image" />
+                </a>
+                <div class="video-bottom-section">
+                    <a href="#">
+                        <img src="http://unsplash.it/36/36?gravity=center" class="channel-icon" />
+                    </a>
+                    <div class="video-details">
+                        <a href="#" class="video-title">Video Title</a>
+                        <a href="#" class="video-channel-name">Channel Name</a>
+                        <div class="video-metadata">
+                            <span>12K views</span>
+                            •
+                            <span>1 week ago</span>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="video-container">
+                <a href="#" class="thumbnail" data-duration="12:24">
+                    <img src="http://unsplash.it/250/150?gravity=center" alt="" class="thumbnail-image" />
+                </a>
+                <div class="video-bottom-section">
+                    <a href="#">
+                        <img src="http://unsplash.it/36/36?gravity=center" class="channel-icon" />
+                    </a>
+                    <div class="video-details">
+                        <a href="#" class="video-title">Video Title</a>
+                        <a href="#" class="video-channel-name">Channel Name</a>
+                        <div class="video-metadata">
+                            <span>12K views</span>
+                            •
+                            <span>1 week ago</span>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section>
+        <section class="video-section">
+            <article class="video-container">
+                <a href="#" class="thumbnail" data-duration="12:24">
+                    <img src="http://unsplash.it/250/150?gravity=center" alt="" class="thumbnail-image" />
+                </a>
+                <div class="video-bottom-section">
+                    <a href="#">
+                        <img src="http://unsplash.it/36/36?gravity=center" class="channel-icon" />
+                    </a>
+                    <div class="video-details">
+                        <a href="#" class="video-title">Video Title</a>
+                        <a href="#" class="video-channel-name">Channel Name</a>
+                        <div class="video-metadata">
+                            <span>12K views</span>
+                            •
+                            <span>1 week ago</span>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="video-container">
+                <a href="#" class="thumbnail" data-duration="12:24">
+                    <img src="http://unsplash.it/250/150?gravity=center" alt="" class="thumbnail-image" />
+                </a>
+                <div class="video-bottom-section">
+                    <a href="#">
+                        <img src="http://unsplash.it/36/36?gravity=center" class="channel-icon" />
+                    </a>
+                    <div class="video-details">
+                        <a href="#" class="video-title">Video Title</a>
+                        <a href="#" class="video-channel-name">Channel Name</a>
+                        <div class="video-metadata">
+                            <span>12K views</span>
+                            •
+                            <span>1 week ago</span>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="video-container">
+                <a href="#" class="thumbnail" data-duration="12:24">
+                    <img src="http://unsplash.it/250/150?gravity=center" alt="" class="thumbnail-image" />
+                </a>
+                <div class="video-bottom-section">
+                    <a href="#">
+                        <img src="http://unsplash.it/36/36?gravity=center" class="channel-icon" />
+                    </a>
+                    <div class="video-details">
+                        <a href="#" class="video-title">Video Title</a>
+                        <a href="#" class="video-channel-name">Channel Name</a>
+                        <div class="video-metadata">
+                            <span>12K views</span>
+                            •
+                            <span>1 week ago</span>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="video-container">
+                <a href="#" class="thumbnail" data-duration="12:24">
+                    <img src="http://unsplash.it/250/150?gravity=center" alt="" class="thumbnail-image" />
+                </a>
+                <div class="video-bottom-section">
+                    <a href="#">
+                        <img src="http://unsplash.it/36/36?gravity=center" class="channel-icon" />
+                    </a>
+                    <div class="video-details">
+                        <a href="#" class="video-title">Video Title</a>
+                        <a href="#" class="video-channel-name">Channel Name</a>
+                        <div class="video-metadata">
+                            <span>12K views</span>
+                            •
+                            <span>1 week ago</span>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="video-container">
+                <a href="#" class="thumbnail" data-duration="12:24">
+                    <img src="http://unsplash.it/250/150?gravity=center" alt="" class="thumbnail-image" />
+                </a>
+                <div class="video-bottom-section">
+                    <a href="#">
+                        <img src="http://unsplash.it/36/36?gravity=center" class="channel-icon" />
+                    </a>
+                    <div class="video-details">
+                        <a href="#" class="video-title">Video Title</a>
+                        <a href="#" class="video-channel-name">Channel Name</a>
+                        <div class="video-metadata">
+                            <span>12K views</span>
+                            •
+                            <span>1 week ago</span>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="video-container">
+                <a href="#" class="thumbnail" data-duration="12:24">
                     <img src="http://unsplash.it/250/150?gravity=center" alt="" class="thumbnail-image" />
                 </a>
                 <div class="video-bottom-section">
