--- a/index.html
+++ b/index.html
@@ -9,6 +9,31 @@
     <title>Document</title>
 </head>
 <body>
+    <header class="header">
+        <a href='#'>
+            <img src="logo.png" alt="YouTube Logo" class="youtube-logo">
+        </a>
+        <form class="search-bar">
+            <input type="search" class="search-input" placeholder="Search" aria-label="Search" />
+            <button type="submit" class="search-btn">
+                <img src="magnify.svg" />
+            </button>
+        </form>
+        <div class="menu-icons">
+            <a href="#">
+                <img src="video-plus.svg" alt="Upload Video" />
+            </a>
+            <a href="#">
+                <img src="apps.svg" alt="Apps" />
+            </a>
+            <a href="#">
+                <img src="bell.svg" alt="Notifications" />
+            </a>
+            <a href="#">
+                <img class="menu-channel-icon" src="http:///unsplash.it/36/36?gravity=center" alt="Your Channel" />
+            </a>
+        </div>
+    </header>
     <div class="categories">
         <section class="category-section">
             <button class="category active">All</button>
